升级到版本3.1.0